# vault-editor

./: .gitignore  README.md  pyproject.toml  secrets.json
scripts/: insert_images.py  needs_info.py
vault_editor/: __init__.py  config.py  images.py  notes.py
vault_editor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
